test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u8_sub_underflow/src/main.sw
script;

fn main() -> bool {
    let a: u8 = u8::min();
    let b: u8 = 1;

    let result: u8 = a - b;
    log(result);

    true
}
